--- a/config.conf
+++ b/config.conf
@@ -2,6 +2,10 @@
 # Put OpenAI API key here
 KEY = 1234
 # Choose the model you want to use here
-model = gpt-3.5-turbo
+# I.e.
+# gpt-4
+# gpt-4-32k
+# gpt-3.5-turbo
+model = gpt-4
 # The "personality" of the AI system
 system_role = You're a friendly and helpful AI called Coco, you're designed to answer any questions of the user
